Bug #328027 --> unable to save or view attachments that are empty. sr=bienvenu