mailnews/base/src/nsMessenger.cpp
@@ -1768,7 +1768,6 @@ nsSaveMsgListener::nsSaveMsgListener(nsIFileSpec* aSpec, nsMessenger *aMessenger
 {
     m_fileSpec = do_QueryInterface(aSpec);
     m_messenger = aMessenger;
-    m_dataBuffer = nsnull;
 
     // rhp: for charset handling
     m_doCharsetConversion = PR_FALSE;
@@ -1778,6 +1777,9 @@ nsSaveMsgListener::nsSaveMsgListener(nsIFileSpec* aSpec, nsMessenger *aMessenger
     mCanceled = PR_FALSE;
     m_outputFormat = eUnknown;
     mInitialized = PR_FALSE;
+    if (m_fileSpec)
+      m_fileSpec->GetOutputStream(getter_AddRefs(m_outputStream));
+    m_dataBuffer = (char*) PR_CALLOC(FOUR_K+1);
 }
 
 nsSaveMsgListener::~nsSaveMsgListener()
@@ -1982,20 +1984,14 @@ nsresult nsSaveMsgListener::InitializeDownload(nsIRequest * aRequest, PRInt32 aB
 NS_IMETHODIMP
 nsSaveMsgListener::OnStartRequest(nsIRequest* request, nsISupports* aSupport)
 {
-    nsresult rv = NS_OK;
+  if (!m_outputStream)
+  {
+    mCanceled = PR_TRUE;
+    if (m_messenger)
+      m_messenger->Alert("saveAttachmentFailed");
+  }
 
-    if (m_fileSpec)
-        rv = m_fileSpec->GetOutputStream(getter_AddRefs(m_outputStream));
-    if (NS_FAILED(rv))
-    {
-      mCanceled = PR_TRUE;
-      if (m_messenger)
-        m_messenger->Alert("saveAttachmentFailed");
-    }
-    else if (!m_dataBuffer)
-        m_dataBuffer = (char*) PR_CALLOC(FOUR_K+1);
-
-    return rv;
+  return NS_OK;
 }
 
 NS_IMETHODIMP
